--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,13 @@
     <!-- MAIN -->
     <div class="main">
         <!-- add partials here -->
-
+        //= partials/top-block.html
+        //= partials/top-slider.html
+        //= partials/5reason.html
+        //= partials/how-it-work.html
+        //= partials/bot-slider.html
+        //= partials/faq.html
+        //= partials/contacts.html
     </div>
     <!-- /MAIN -->
 
