--- a/src/mail.html
+++ b/src/mail.html
@@ -143,7 +143,7 @@
                                                         </tr>
                                                         <tr>
                                                             <td>
-                                                                <a target="_blank" href="http://design-paneli.ru/o-kompanii/" style="font-family:'Avenir', Arial, sans-serif;font-weight:400;font-size:14px;line-height:14px; color:#fff; text-decoration: none; padding-left: 104px; ">О ПАНЕЛЯХ</a><a target="_blank" href="http://design-paneli.ru/dizajneram/" style="font-family:'Avenir', Arial, sans-serif;font-weight:400;font-size:14px;line-height:14px; color:#fff; text-decoration: none; padding-left: 38px; ">ВАРИАНТЫ И ЦЕНЫ</a>
+                                                                <a target="_blank" href="http://woodandwall.ru/" style="font-family:'Avenir', Arial, sans-serif;font-weight:400;font-size:14px;line-height:14px; color:#fff; text-decoration: none; padding-left: 104px; ">О ПАНЕЛЯХ</a><a target="_blank" href="http://woodandwall.ru/" style="font-family:'Avenir', Arial, sans-serif;font-weight:400;font-size:14px;line-height:14px; color:#fff; text-decoration: none; padding-left: 38px; ">ВАРИАНТЫ И ЦЕНЫ</a>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -179,7 +179,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <a target="_blank" href="http://design-paneli.ru/kontakty/"  style="background-image:url('images/mail/butt.png'); background-position: center center; background-repeat: no-repeat; background-size: cover; width: 255px; height: 50px; text-align: center;font-family:'Avenir', Arial, sans-serif;font-weight:500;font-size:16px;line-height:50px;color:#000; text-decoration: none; display: inline-block; ">ЗАКАЗАТЬ</a>
+                                                    <a target="_blank" href="http://woodandwall.ru/" style="background-image:url('/images/mail/butt.png'); background-position: center center; background-repeat: no-repeat; background-size: cover; width: 161px; height: 24px; text-align: center;font-family:'Avenir', Arial, sans-serif;font-weight:500;font-size:16px;line-height:16px;color:#fff; text-decoration: none; display: inline-block; padding-top: 5px;">Заказать звонок</a>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -253,10 +253,10 @@
                                                         </tr>
                                                         <tr>
                                                             <td>
-                                                                <a target="_blank" href="http://design-paneli.ru/collection-relif/" style="text-decoration: none;">
+
                                                                     <img src="images/mail/col1.png" alt="" />
                                                                     <p style="font-family:'Avenir', Arial, sans-serif;font-weight:700;font-size:18px;line-height:18px;color:#fff;">Relif</p>
-                                                                </a>
+
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -268,10 +268,10 @@
                                                         </tr>
                                                         <tr>
                                                             <td>
-                                                                <a target="_blank" href="http://design-paneli.ru/kollekciya-canyon/" style="text-decoration: none;">
+
                                                                     <img src="images/mail/col3.png" alt="" />
                                                                     <p style="font-family:'Avenir', Arial, sans-serif;font-weight:700;font-size:18px;line-height:18px;color:#fff;">Canyon</p>
-                                                                </a>
+
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -283,10 +283,10 @@
                                                         </tr>
                                                         <tr>
                                                             <td>
-                                                                <a target="_blank" href="http://design-paneli.ru/collection-geometrica/" style="text-decoration: none;">
+
                                                                     <img src="images/mail/col2.png" alt="" />
                                                                     <p style="font-family:'Avenir', Arial, sans-serif;font-weight:700;font-size:18px;line-height:18px;color:#fff;">Geometrica</p>
-                                                                </a>
+
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -301,10 +301,10 @@
                                                         </tr>
                                                         <tr>
                                                             <td>
-                                                                <a target="_blank" href="http://design-paneli.ru/kollekciya-city/" style="text-decoration: none;">
+
                                                                     <img src="images/mail/col4.png" alt="" />
                                                                     <p style="font-family:'Avenir', Arial, sans-serif;font-weight:700;font-size:18px;line-height:18px;color:#fff;">City</p>
-                                                                </a>
+
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -316,10 +316,10 @@
                                                         </tr>
                                                         <tr>
                                                             <td>
-                                                                <a target="_blank" href="http://design-paneli.ru/kollekciya-3d-vision/" style="text-decoration: none;">
+
                                                                     <img src="images/mail/col5.png" alt="" />
                                                                     <p style="font-family:'Avenir', Arial, sans-serif;font-weight:700;font-size:18px;line-height:18px;color:#fff;">3D Vision</p>
-                                                                </a>
+
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -331,10 +331,10 @@
                                                         </tr>
                                                         <tr>
                                                             <td>
-                                                                <a target="_blank" href="http://design-paneli.ru/kolekciya-solid-figures/" style="text-decoration: none;">
+
                                                                     <img src="images/mail/col6.png" alt="" />
                                                                     <p style="font-family:'Avenir', Arial, sans-serif;font-weight:700;font-size:18px;line-height:18px;color:#fff;">Solid Figures</p>
-                                                                </a>
+
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -352,7 +352,7 @@
                                                         </tr>
                                                         <tr>
                                                             <td>
-                                                                <a target="_blank" href="http://design-paneli.ru/"  style="background-color:#ffcf50; width: 255px; height: 50px; text-align: center;font-family:'Avenir', Arial, sans-serif;font-weight:500;font-size:16px;line-height:50px;color:#000; text-decoration: none; display: inline-block;">УЗНАТЬ ПОДРОБНЕЕ</a>
+                                                                <a target="_blank" href="http://woodandwall.ru" style="background-image:url('http://test57.sheep.fish/images/mail/butt.png'); background-position: center center; background-repeat: no-repeat; background-size: cover; width: 161px; height: 24px; text-align: center;font-family:'Avenir', Arial, sans-serif;font-weight:500;font-size:16px;line-height:16px;color:#fff; text-decoration: none; display: inline-block; padding-top: 5px;">Узнать подробнее</a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -387,7 +387,7 @@
                                                         </tr>
                                                         <tr>
                                                             <td>
-                                                                <span style="font-family:'Avenir', Arial, sans-serif; font-weight:400; font-size:24px; line-height:24px;color:#292929;     ">С уважением, Александр </span>
+                                                                <span style="font-family:'Avenir', Arial, sans-serif; font-weight:400; font-size:24px; line-height:24px;color:#292929;     ">С уважением, Дмитрий </span>
                                                             </td>
                                                         </tr>
                                                          <tr>
